--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -101,7 +101,7 @@ layout: default
                 <!-- Short About -->
                 <section class="visible-md visible-lg">
                     <hr><h5><a href="{{'/about/' | prepend: site.baseurl }}">ABOUT ME</a></h5>
-                    <div class="short-about">
+                    <div class="short-about" style="color:#525252;">
                         {% if site.sidebar-avatar %}
                             <img src="{{site.sidebar-avatar}}" />
                         {% endif %}
