--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -137,17 +137,29 @@ layout: default
                             <li>
                                 <a target="_blank" href="https://www.zhihu.com/people/{{ site.zhihu_username }}">
                                     <span class="fa-stack fa-lg">
-                                        <i class="fa fa-circle fa-stack-2x"></i>
+                                        <i class="fa fa-circle fa-stack-2x" style="color:RGB(7,103,200)"></i>
                                         <i class="fa  fa-stack-1x fa-inverse">知</i>
                                     </span>
                                 </a>
                             </li>
                             {% endif %}
+
+                            {% if site.github_username %}
+                            <li>
+                                <a target="_blank" href="https://github.com/{{ site.github_username }}">
+                                    <span class="fa-stack fa-lg">
+                                        <i class="fa fa-circle fa-stack-2x" style="color: black"></i>
+                                        <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                                    </span>
+                                </a>
+                            </li>
+                            {% endif %}
+                            
                             {% if site.weibo_username %}
                             <li>
                                 <a target="_blank" href="http://weibo.com/{{ site.weibo_username }}">
                                     <span class="fa-stack fa-lg">
-                                        <i class="fa fa-circle fa-stack-2x"></i>
+                                        <i class="fa fa-circle fa-stack-2x" style="color: red"></i>
                                         <i class="fa fa-weibo fa-stack-1x fa-inverse"></i>
                                     </span>
                                 </a>
@@ -163,16 +175,7 @@ layout: default
                                 </a>
                             </li>
                             {% endif %}
-                            {% if site.github_username %}
-                            <li>
-                                <a target="_blank" href="https://github.com/{{ site.github_username }}">
-                                    <span class="fa-stack fa-lg">
-                                        <i class="fa fa-circle fa-stack-2x"></i>
-                                        <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                                    </span>
-                                </a>
-                            </li>
-                            {% endif %}
+                            
                         </ul>
                     </div>
                 </section>
