--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -64,6 +64,7 @@ layout: default
                     <div class="ds-share-inline">
                       <ul  class="ds-share-icons-16">
 <!--                    <li data-toggle="ds-share-icons-more"><a class="ds-more" href="javascript:void(0);">分享到：</a></li> -->
+                        <li>分享到</li>
                         <li><a class="ds-wechat flat" href="javascript:void(0);" data-service="wechat">微信</a></li>
                         <li><a class="ds-qzone" href="javascript:void(0);" data-service="qzone">QQ空间</a></li>
                         <li><a class="ds-weibo flat" href="javascript:void(0);" data-service="weibo">微博</a></li>
@@ -77,7 +78,6 @@ layout: default
                 </div>
                 <!-- 多说 Share end-->
                 {% endif %}
-
 
                 <ul class="pager">
                     {% if page.previous.url %}
@@ -149,7 +149,7 @@ layout: default
                 <!-- Friends Blog -->
                 {% if site.friends %}
                 <hr>
-                <h5>FRIENDS</h5>
+                <h5>友情链接</h5>
                 <ul class="list-inline">
                     {% for friend in site.friends %}
                         <li><a href="{{friend.href}}">{{friend.title}}</a></li>
