--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,7 +10,13 @@ layout: default
                 <div class="site-heading">
                     <h1>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</h1>
                     <!--<hr class="small">-->
+                    {% if page.description %}
                     <span class="subheading">{{ page.description }}</span>
+                    {% else %}
+                    <span class="subheading">{{ page.description1 }}</span>
+                    <span class="subheading">{{ page.description2 }}</span>
+                    <span class="subheading">{{ page.description3 }}</span>
+                    {% endif %}
                 </div>
             </div>
         </div>
