--- a/less/skq-blog.less
+++ b/less/skq-blog.less
@@ -234,7 +234,8 @@ pre code{
 
 .navbar-custom {
 	// materialize
-	background: none;
+	// background: none;
+	background: rgba(0,0,0,0.3);
 	border:none;
 	position: absolute;
 	top: 0;
@@ -271,7 +272,8 @@ pre code{
 		body{
 			font-size: 20px;
 		}
-		background: transparent;
+		background: rgba(0,0,0,0.3);
+		//background: transparent;
 		border-bottom: 1px solid transparent;
 		.navbar-brand {
 			color: white;
@@ -286,6 +288,7 @@ pre code{
 			li {
 				a {
 					color: white;
+					font-size: 18px;
 					padding: 20px;
 					&:hover,
 					&:focus {
